add actuator endpoint to query user count
